<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云上浙师</string>
    <string name="app_version">版本号：%s</string>
    <string name="title_activity_news">校园新闻</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_settings">设置</string>
    <string name="detail">详情</string>
    <string name="content_loading">正在玩命加载中。。。</string>
    <string name="no_more_data">没有更多了</string>
    <string name="exit_hint">再按一次退出</string>
    <string name="dialog_hint">提示</string>
    <string name="try_again">重试</string>
    <string name="success">成功</string>
    <string name="refresh_cancelled">刷新已取消</string>
    <string name="network_fail">网络请求超时或失败，请检查您的网络设置！</string>
    <string name="update_available">有新版本啦！</string>
    <string name="update">更新</string>
    <string name="placeholder_for_navdrawer_item">item</string>

    <!-- 用户模块相关 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_register">新用户注册</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册新帐号</string>
    <string name="title_activity_bus">校园公交</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>

    <!-- 用户登录注册相关 -->
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败，请重试！</string>
    <string name="register_fail_username">用户名 %s 已被使用，请重新输入</string>
    <string name="register_fail_email">邮箱 %s 已被注册，请更改</string>
    <string name="login_info">玩命登录中。。。</string>
    <string name="login_success">欢迎回来，%s！</string>
    <string name="login_fail">登录失败！</string>
    <string name="login_fail_101">登录失败，用户名或密码错误！</string>
    <string name="logout_success">您已退出登录！</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="reset_password">找回密码</string>
    <string name="reset_email">注册时的邮箱</string>
    <string name="reset_back_login">返回账号登录</string>
    <string name="reset_success">已向您的邮箱发送了一封密码重置邮件，请登录邮箱按提示操作</string>
    <string name="reset_fail">找回密码失败，请重试！</string>
    <string name="error_invalid_username">用户名不能为空</string>
    <string name="error_invalid_email">邮箱地址格式不正确</string>
    <string name="error_incorrect_password">密码长度不能小于6位</string>

    <!-- 主页模块 -->
    <string-array name="module_titles">
        <item>新闻聚合</item>
        <item>校历</item>
        <item>校园公交</item>
        <item>讲座预告</item>
        <item>成绩查询</item>
        <item>课表</item>
        <item>考试安排</item>
        <item>图书馆</item>
        <item>后勤中心</item>
    </string-array>

    <!-- 底部导航栏 -->
    <string name="title_bottom_main">云上浙师</string>
    <string name="title_bottom_explore">发现</string>
    <string name="title_bottom_settings">设置</string>

    <!-- 左侧抽屉 -->
    <string name="drawer_dynamics">我的动态</string>
    <string name="drawer_explore">发现</string>
    <string name="drawer_notification">消息通知</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_footer_exit">退出</string>
    <string name="drawer_footer_about">关于</string>
    <string name="drawer_footer_feedback">反馈</string>

    <!-- 校历模块相关 -->
    <string name="title_activity_calendar">浙师大2016&#8211;2017学年校历</string>
    <string name="calendar_no_event">本月无校历活动</string>

    <!-- 讲座预告模块相关 -->
    <string name="title_activity_speech">讲座预告</string>

    <!-- Bmob相关 -->
    <string name="bmob_not_login">您需要登录后才能使用该功能，现在就去登录吧！</string>
    <string name="action_to_bmob_login">前去登录</string>

    <!-- 教务系统相关 -->
    <string name="emis_not_bind">您当前还未绑定教务系统账号，是否现在去绑定？</string>
    <string name="action_to_emis_bind">现在绑定</string>
    <string name="title_activity_bind">教务系统账号绑定</string>
    <string name="prompt_emis_username">教务账号</string>
    <string name="prompt_emis_password">教务密码</string>
    <string name="action_confirm_bind">确认绑定</string>
    <string name="action_confirm_rebind">重新绑定</string>
    <string name="binding_info">教务账号绑定中，请耐心等待！</string>
    <string name="bind_success">绑定成功！</string>
    <string name="unbind_warning_info">解绑教务账号后，您本地缓存的成绩、课表、考试安排等数据将会被清空。确定要解绑？</string>
    <string name="unbind_confirm">确定解绑</string>
    <string name="unbinding_info">正在解除绑定，请稍侯。。。</string>
    <string name="unbind_success">解绑成功</string>
    <string name="unbind_fail">解绑失败，重新试一下吧！</string>
    <string name="emis_token_invalid">用户认证失败，请到个人资料界面解绑后重新绑定教务账号</string>
    <string name="emis_request_timeout">访问人数过多，服务器累了，稍后再试试吧！</string>
    <string name="emis_offline">未能获取到数据，稍后再试试吧！</string>
    <string name="emis_server_error">我们的服务器出现了异常，程序员正玩命抢修中，请稍后再试&#8230;</string>
    <string name="emis_error">教务系统暂时无法访问，过会儿再试吧&#8230;</string>

    <!-- 成绩查询模块 -->
    <string name="title_activity_score">成绩查询</string>
    <string name="title_activity_score_additional">&#160;同学的成绩单</string>
    <string name="course_credit">学分：%1$s</string>
    <string name="course_mark_first">正考：%1$s</string>
    <string name="course_mark_second">补考：%1$s</string>
    <string name="course_gradepoint">绩点：%1$s</string>
    <string name="course_id">课程序号：%1$s</string>
    <string name="score_subtitle">您历年的成绩如下</string>
    <string name="score_credit">所得总学分</string>
    <string name="score_gpa">平均绩点</string>
    <string name="score_refreshing_score">正在刷新成绩数据，请稍候&#8230;</string>

    <!-- 考试安排模块 -->
    <string name="title_activity_exam">考试安排</string>
    <string name="title_activity_exam_additional">&#160;的考试安排</string>
    <string name="exam_empty_title">同学</string>
    <string name="exam_subtitle">您这学期的考试安排情况如下</string>
    <string name="exam_id">课程代码：%1$s</string>
    <string name="exam_name">课程名称：%1$s</string>
    <string name="exam_class">教学班：%1$s</string>
    <string name="exam_teacher">任课教师：%1$s</string>
    <string name="exam_date">考试日期：%1$s</string>
    <string name="exam_time">考试时间：%1$s</string>
    <string name="exam_place">考试地点：%1$s</string>
    <string name="exam_student_no">考生编号：%1$s</string>
    <string name="exam_refreshing_exam">正在刷新考试安排数据，请稍候&#8230;</string>

    <!-- 课表模块 -->
    <string name="title_activity_course">课表</string>
    <string name="course_toolbar_title">我的课表</string>
    <string name="course_refreshing_course">正在刷新课表数据，请稍候&#8230;</string>

    <!-- 图书馆模块相关 -->
    <string name="title_activity_library">图文馆藏搜索</string>

    <!-- 后勤模块相关 -->
    <string name="title_activity_logistics">浙师微后勤</string>

    <!-- 个人资料 -->
    <string name="title_activity_profile">%1$s</string>
    <string name="title_activity_profile_additional">&#160;的个人资料</string>
    <string name="profile_item_bar_dynamics">动态</string>
    <string name="profile_item_bar_explore">发现</string>
    <string name="profile_item_bar_notification">通知</string>
    <string name="profile_item_bind_emis">绑定教务系统账号</string>
    <string name="profile_item_unbind_emis">解除绑定：%1$s</string>
    <string name="profile_item_avatar">修改头像</string>
    <string name="profile_avatar_upload_failure">头像上传失败，请重试</string>
    <string name="profile_avatar_upload_success">头像更新成功！</string>
    <string name="profile_item_password">修改密码</string>
    <string name="profile_update_org_password_hint">原密码</string>
    <string name="profile_update_new_password_hint">新密码</string>
    <string name="profile_update_new_password_repeat_hint">重复新密码</string>
    <string name="profile_update_password_not_match">两次输入的密码不一致，请检查！</string>
    <string name="profile_update_password_success">密码修改成功！</string>
    <string name="profile_update_password_failure">密码修改失败，请重试</string>
    <string name="profile_button_logout">退出登录</string>
    <string name="profile_logout_confirm">退出登录后，您本地缓存信息包括教务数据将会被清空。确定要退出登录吗？</string>

    <!-- 关于界面 -->
    <string name="title_activity_about">关于我们</string>
    <string name="about_contact">联系我们</string>
    <string-array name="contacts">
        <item>吴逸川</item>
        <item>李建舜</item>
        <item>朱丰</item>
    </string-array>
    <string name="about_words">&#160;&#160;&#160;&#160;我们是一群快乐的程序猿，致力于浙师大校内大学生的生活服务。秉承一切为学生，为了学生一切的原则，为大家带来方便快捷的服务。\n\n&#160;&#160;&#160;&#160;服务说明：
云上浙师中“图书馆”的接口来自于“浙师图文”微信公众号，“后勤服务”的接口来自于“浙师微生活”微信公众号，更多服务资源请关注“浙师图文”和“浙师微生活”的微信公众号~~~</string>

    <!-- 反馈界面 -->
    <string name="title_activity_feedback">反馈</string>
    <string name="feedback_contact">联系方式</string>
    <string name="feedback_content">反馈内容</string>
    <string name="feedback_no_content">您还未填写反馈内容哦</string>
    <string name="feedback_no_contact">我们希望留下您的联系方式(QQ、微信、邮箱等)以便进一步沟通，但您也可以不填写，确定要直接发送吗？</string>
    <string name="feedback_action_send_direct">发送</string>
    <string name="feedback_action_rewrite_contact">返回填写</string>
    <string name="feedback_not_sent">您写了点宝贵意见，确定要放弃发送吗？</string>
    <string name="feedback_success">提交成功，非常感谢您的反馈，我们会努力做得更好！</string>
    <string name="feedback_failure">反馈发送失败，请检查您的网络设置</string>

    <!-- 发现界面 -->
    <string name="title_activity_explore">发现</string>

    <!-- 设置相关 -->
    <string name="title_activity_settings">设置</string>
    <string name="settings_general">基本</string>
    <string name="settings_user">用户</string>
    <string name="settings_clean_cache">清空缓存</string>
    <string name="settings_clean_cache_finish">缓存目录清空完毕！</string>
</resources>
