<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="general"
        android:title="@string/settings_general">
        <Preference android:key="login"
            android:title="@string/login"/>
        <Preference android:key="clean_cache"
            android:title="@string/settings_clean_cache"/>
        <!--<SwitchPreference android:key="load_image_on_mobile_network"-->
            <!--android:title="@string/pref_title_load_image_on_mobile_network"-->
            <!--android:summary="@string/pref_summary_load_image_on_mobile_network"/>-->
    </PreferenceCategory>
    <PreferenceCategory
        android:key="user"
        android:title="@string/settings_user">
        <Preference android:key="user_info"/>
    </PreferenceCategory>
</PreferenceScreen>
