<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

	<group android:id="@+id/group_top"
		android:checkableBehavior="single">

		<item android:id="@+id/my_profile"
			android:title="@string/drawer_dynamics"
		    android:icon="@drawable/ic_account_circle_black_48dp">
		</item>
		<item android:id="@+id/explore"
			android:title="@string/drawer_explore"
		    android:icon="@drawable/ic_visibility_black_48dp">
		</item>
		<item android:id="@+id/notification"
			android:title="@string/drawer_notification"
		    android:icon="@drawable/ic_message_black_48dp">
		</item>

	</group>

	<group android:id="@+id/group_settings">
		<item android:id="@+id/setting"
		      android:title="@string/drawer_setting"
		      android:icon="@drawable/ic_settings_black_48dp">
		</item>
	</group>
</menu>