<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activities.LoginActivity"
	>

	<include layout="@layout/top_toolbar"
	         android:id="@+id/registerToolbar"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_login_vertical_margin"
		android:paddingLeft="@dimen/activity_login_horizontal_margin"
		android:paddingRight="@dimen/activity_login_horizontal_margin"
		android:paddingTop="@dimen/activity_login_vertical_margin"
		android:gravity="center_horizontal">


		<EditText
			android:id="@+id/username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/prompt_username"
			android:inputType="text"
			android:maxLines="1"
			android:singleLine="true"/>

		<EditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/prompt_email"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			android:singleLine="true"/>

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/prompt_password"
			android:imeActionLabel="@string/action_sign_in_short"
			android:imeOptions="actionUnspecified"
			android:inputType="textPassword"
			android:maxLines="1"
			android:singleLine="true"/>

		<Button
			android:id="@+id/register_new_user"
			style="?android:textAppearanceSmall"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:background="@color/material_blue"
			android:text="@string/register"
			android:textColor="@color/white"
			android:textSize="18sp"
			android:textStyle="bold"/>


	</LinearLayout>

</LinearLayout>