<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/top_toolbar" />

    <LinearLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_login_vertical_margin"
        android:paddingBottom="@dimen/activity_login_vertical_margin"
        android:paddingLeft="@dimen/activity_login_horizontal_margin"
        android:paddingRight="@dimen/activity_login_horizontal_margin"
        android:paddingTop="@dimen/activity_login_vertical_margin">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/forgot_password" />

            <TextView
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:text="@string/login_register"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/reset_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_login_vertical_margin"
        android:paddingBottom="@dimen/activity_login_vertical_margin"
        android:paddingLeft="@dimen/activity_login_horizontal_margin"
        android:paddingRight="@dimen/activity_login_horizontal_margin"
        android:paddingTop="@dimen/activity_login_vertical_margin"
        android:visibility="gone"
        >


        <EditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:id="@+id/reset_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/reset_back_login"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/reset_back_login"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/reset_login_register"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:text="@string/login_register"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>