<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingLeft="6dp"
    android:paddingRight="6dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="课程名称"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_name"
        android:layout_alignStart="@+id/tv_name"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="24dp"
        android:text="@string/course_credit"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_mark_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:text="100"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/material_green"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/tv_mark_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mark_final"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/course_mark_first"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_mark_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_mark_first"
        android:layout_toLeftOf="@id/tv_mark_first"
        android:layout_toStartOf="@id/tv_mark_first"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/course_mark_second"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_gp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_name"
        android:layout_alignStart="@+id/tv_name"
        android:layout_below="@+id/tv_date"
        android:layout_marginBottom="12dp"
        android:text="@string/course_gradepoint"
        android:textSize="16sp"
        android:layout_marginTop="3dp" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_gp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/course_id"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>