<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="5dp"
    card_view:cardMaxElevation="5dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="课程名称"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_name"
            android:layout_alignStart="@+id/tv_name"
            android:layout_below="@id/tv_name"
            android:layout_marginTop="16dp"
            android:text="@string/exam_date"
            android:textColor="@color/exam_time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_name"
            android:layout_alignStart="@+id/tv_name"
            android:layout_below="@id/tv_date"
            android:layout_marginTop="4dp"
            android:text="@string/exam_time"
            android:textColor="@color/exam_time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_classno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="6dp"
            android:text="3649"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/exam_teach_no"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/tv_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_name"
            android:layout_alignStart="@+id/tv_name"
            android:layout_below="@+id/tv_time"
            android:layout_marginBottom="12dp"
            android:text="@string/exam_place"
            android:textSize="16sp"
            android:textColor="@color/exam_time"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tv_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_place"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/exam_teacher"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_stu_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/tv_teacher"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/exam_student_no"
            android:textSize="15sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>